<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">
    <TextView
        android:id="@+id/tvLoginAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@color/dark_black"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/login_to_your_account"/>
    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginAccount"
        android:text="@string/please_enter_your_information_below_in_order"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_medium"/>
    <TextView
        android:id="@+id/tvOrdertoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/tvInformation"
        android:text="to login to your account"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_medium"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOrdertoLogin"
        android:layout_marginTop="20dp"
        android:text="Email"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginHorizontal="20dp"
        android:textColor="#000000"/>
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:elevation="3dp"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="@color/grey"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="@color/dark_black"
        android:paddingStart="12dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_mail_address"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        android:background="@drawable/bg_login_white"/>
    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginHorizontal="20dp"
        android:textColor="#000000"/>
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:elevation="3dp"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="@color/grey"
        android:paddingStart="12dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="@color/dark_black"
        android:hint="@string/enter_your_password"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        android:background="@drawable/bg_login_white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:layout_marginEnd="21dp"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
    <TextView
        android:id="@+id/btnLogin"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="5dp"
        android:text="@string/signin"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/bg_login_blue"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin">
        <TextView
            android:id="@+id/tvNotAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/dark_black"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/don_t_have_an_account"/>
        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintStart_toEndOf="@+id/tvNotAccount"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/blue"
            android:fontFamily="@font/poppins_bold"
            android:text="SignUp"/>

    </LinearLayout>
    <!--    <TextView-->
    <!--        android:id="@+id/tvNotAccount"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btnLogin"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/btnLogin"-->
    <!--        android:layout_marginTop="5dp"-->
    <!--        android:textSize="14sp"-->
    <!--        android:textColor="@color/brown"-->
    <!--        android:fontFamily="@font/poppins_semibold"-->
    <!--        android:text="Don't have an account?"/>-->
    <!--    <TextView-->
    <!--        android:id="@+id/signUp"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btnLogin"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/tvNotAccount"-->
    <!--        android:layout_marginTop="5dp"-->
    <!--        android:textSize="14sp"-->
    <!--        android:textColor="@color/green"-->
    <!--        android:fontFamily="@font/poppins_bold"-->
    <!--        android:text="@string/signup"/>-->




</androidx.constraintlayout.widget.ConstraintLayout>