<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_round_corners"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_scan_document"
                style="@style/SmallTextView"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/select_photo"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tvCamera"
                style="@style/SmallTextView"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/open_camera"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tvGallery"
                style="@style/SmallTextView"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/pick_from_gallery"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/SmallTextView"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_white_round_corners"
            android:gravity="center"
            android:padding="10dp"
            android:text="Cancel"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>