<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/fixed_assets"/>
    <TextView
        android:id="@+id/tvAssets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fixed Assets"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/dark_black"
        app:layout_constraintStart_toStartOf="@+id/ivLogo"
        app:layout_constraintEnd_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>
    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:textColor="@color/dark_black"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/create_account_to_continue"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAssets"/>
    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:elevation="5dp"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="@color/grey"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="@color/dark_black"
        android:paddingStart="12dp"
        android:backgroundTint="@null"
        android:hint="User Name"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount"
        android:background="@drawable/bg_login_white"/>
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:elevation="5dp"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="@color/grey"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="@color/dark_black"
        android:paddingStart="12dp"
        android:inputType="textEmailAddress"
        android:backgroundTint="@null"
        android:hint="Enter Your Email Address"
        app:layout_constraintTop_toBottomOf="@+id/edtName"
        android:background="@drawable/bg_login_white"/>
    <EditText
        android:id="@+id/edtLocation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:elevation="5dp"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="@color/grey"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="@color/dark_black"
        android:paddingStart="12dp"
        android:backgroundTint="@null"
        android:hint="Location"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        android:background="@drawable/bg_login_white"/>
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:elevation="5dp"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="@color/grey"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="@color/dark_black"
        android:paddingStart="12dp"
        android:backgroundTint="@null"
        android:hint="Enter Password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtLocation"
        android:background="@drawable/bg_login_white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        android:text="@string/do_you_agree_to_our_terms_and_condition"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@+id/edtPassword"
      app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/btnLogin"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="5dp"
        android:text="@string/signup"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/bg_login_blue"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin">
    <TextView
        android:id="@+id/tvNotAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:textColor="@color/dark_black"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/don_t_have_an_account"/>
    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toEndOf="@+id/tvNotAccount"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:layout_marginStart="5dp"
        android:textColor="@color/blue"
        android:fontFamily="@font/poppins_bold"
        android:text="SignIn"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>